# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md  TODO.md  in  solve.py
day-00/: Cargo.toml  notes.md
day-00/src/: main.rs
day-01/: Cargo.toml
day-01/src/: main.rs
day-02/src/: main.rs
day-03/: Cargo.toml
day-03/src/: main.rs
day-04/src/: main.rs
day-05/: Cargo.toml  test.py
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/src/: a  main.rs
grhkm-advent-of-code-2022/: Cargo.toml
grhkm-advent-of-code-2022/src/: fetcher.rs  lib.rs  main.rs  solver.rs  utils.rs
grhkm-advent-of-code-2022/src/solutions/: day_00.rs  day_01.rs  day_02.rs  day_05.rs  day_07.rs  day_08.rs  day_10.rs  day_12.rs  day_16.rs  day_17.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs  solver.rs
grhkm-advent-of-code-2022/src/utils/: index.rs  math.rs  mod.rs  points.rs
grhkm-advent-of-code-2022/tests/: tests.rs
grhkm-poly/: Cargo.toml
grhkm-poly/src/: fraction.rs  lib.rs  poly.rs
input/: day_10.in
input/data/: day_15.in
src/: consts.rs  fetcher.rs  lib.rs  main.rs  solutions.rs  solver.rs
src/poly/: poly.rs
src/poly/src/: lib.rs  poly.rs
src/solutions/: day_00.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  mod.rs  solver.rs
tests/: tests.rs
tests/common/: mod.rs  utils.rs
