[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
typed-arena = "2.0.1"
rand = "0.8.5"